--- a/package.json
+++ b/package.json
@@ -7,16 +7,27 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "@mdi/font": "5.9.55",
+    "axios": "^0.21.1",
+    "core-js": "^3.9.1",
+    "roboto-fontface": "*",
+    "secure-ls": "^1.2.6",
+    "vue": "^2.6.12",
+    "vue-i18n": "^8.24.1",
+    "vue-router": "^3.5.1",
+    "vuetify": "^2.4.7",
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "vue-template-compiler": "^2.6.11"
+    "@vue/cli-plugin-babel": "~4.5.12",
+    "@vue/cli-plugin-router": "~4.5.12",
+    "@vue/cli-plugin-vuex": "~4.5.12",
+    "@vue/cli-service": "~4.5.12",
+    "sass": "^1.32.8",
+    "sass-loader": "^10.1.1",
+    "vue-cli-plugin-vuetify": "~2.2.2",
+    "vue-template-compiler": "^2.6.12",
+    "vuetify-loader": "^1.7.2"
   }
 }
